# handcam

./: .gitignore  LICENSE  README.md  pyproject.toml
handcam/: entrypoint.py  env_test.py  train-new.py  train_WRN_Keras.py  train_finetune_DenseNetKeras.py  update_sample_database.py  view-oni.py
handcam/ltt/network/: Tools.py
handcam/ltt/util/: Preprocessing.py  TFTools.py  Utils.py
handcam/scratch/: alpha_matting_overlay.py  cam-params.txt  check_handcam_seq_output.py  compile_results.py  convert_pytorch_wide_resnet.py  convert_white_screen_to_np.py  copy_oldest_model_weights.sh  create_relab_animation.py  create_sample_plots.py  depth_histogram_test.py  dirty-view-oni.py  fast_oni_view.py  fmpeg_command.txt  generator_speed_test_UW.py  gesture_spotting_old_files.py  hand_generation_test.py  handcam_results.py  handcam_results_test_set.py  handcam_validation_split.py  handcam_validation_split_single_frames.py  interview.py  make_latex_results_tables.py  make_legend.py  plot_class_probabilities.py  plot_seq_results_vector_confusion_matrix.py  stack_exchange_nn_transfer_plz_help.py  test-cam.py  train_all_from_scratch.sh  train_all_from_scratch_imu.sh  uw_test_train_splits.py
handcam/scratch/145850-grasp_5/: accel.txt  gyro.txt  misc.txt  pose.txt
handcam/tensorflow/: run_validation_samples_icra.py
handcam/tensorflow/handcam/: eval_handcam.py  eval_handcam_fixedsequence_all.py  prepare_handcam_test_tfrecords.py  prepare_handcam_tfrecords.py  prepare_handcam_tfrecords_images.py  run_all_test_samples.py  run_all_validations.py  train_handcam_any.py  (+2 more)
(+33 files in other folders)
